Close Permission applicant rule trace slice